Wed Sep 03 18:29:41 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/constants.h: Hide internal constants from external
	  users.

Tue Sep 02 14:15:50 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_spellingwordslist.h: Explicit include
	  brass_cursor.h since we actually use BrassCursor here.

Mon Sep 01 22:03:11 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: New testcase readonlyparentdir1 to ensure that
	  commit works with a read-only parent directory.

Mon Sep 01 21:51:45 GMT 2014  Olly Betts <olly@survex.com>

	* tests/harness/testrunner.h: Drop "flint" flag - flint was removed
	  from trunk some time ago.

Mon Sep 01 21:42:31 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/: Eliminate brass_doclen_t in favour of just using
	  Xapian::termcount.

Mon Sep 01 21:28:39 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_check.h: Tweak to ease upcoming big merge.

Mon Sep 01 20:59:40 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/,backends/dbcheck.cc: Only create a btree entry for
	  the document data if it is non-empty.  The table is now lazily
	  created, so won't exist if no documents have document data set.

Mon Sep 01 16:54:44 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_record.cc,backends/brass/brass_record.h: Remove
	  BrassRecordTable::get_doccount() as it is no longer used.

Mon Sep 01 16:51:04 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/: Track doccount in the database stats.

Mon Sep 01 16:27:15 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc: Update comment and exception
	  message not to talk about "consistent state", as that was to do
	  with the base files.

Mon Sep 01 14:57:02 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc: Explicitly include brass_defs.h.

Mon Sep 01 14:48:01 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/: Eliminate backends/brass/brass_types.h.
