@@ -1,6 +1,6 @@
 # generate-exceptions: generate C++ files for Xapian's exception hierarchy.
 #
-# Copyright (C) 2003,2004,2006,2007,2008,2009,2011,2012,2013 Olly Betts
+# Copyright (C) 2003,2004,2006,2007,2008,2009,2011,2012,2013,2014 Olly Betts
 # Copyright (C) 2007 Richard Boulton
 #
 # This program is free software; you can redistribute it and/or
@@ -42,7 +42,7 @@ print HDR <<'EOF';
 #ifndef XAPIAN_INCLUDED_ERROR_H
 #define XAPIAN_INCLUDED_ERROR_H
 
-#if !defined XAPIAN_INCLUDED_XAPIAN_H && !defined XAPIAN_LIB_BUILD
+#if !defined XAPIAN_IN_XAPIAN_H && !defined XAPIAN_LIB_BUILD
 # error "Never use <xapian/error.h> directly; include <xapian.h> instead."
 #endif
 
