@@ -1,7 +1,7 @@
 /** @file errorhandler.h
  * @brief Decide if a Xapian::Error exception should be ignored.
  */
-/* Copyright (C) 2003,2006,2007,2012,2013 Olly Betts
+/* Copyright (C) 2003,2006,2007,2012,2013,2014 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -21,7 +21,7 @@
 #ifndef XAPIAN_INCLUDED_ERRORHANDLER_H
 #define XAPIAN_INCLUDED_ERRORHANDLER_H
 
-#if !defined XAPIAN_INCLUDED_XAPIAN_H && !defined XAPIAN_LIB_BUILD
+#if !defined XAPIAN_IN_XAPIAN_H && !defined XAPIAN_LIB_BUILD
 # error "Never use <xapian/errorhandler.h> directly; include <xapian.h> instead."
 #endif
 
