@@ -23,7 +23,7 @@
 #ifndef XAPIAN_INCLUDED_SNIPPER_H
 #define XAPIAN_INCLUDED_SNIPPER_H
 
-#if !defined XAPIAN_INCLUDED_XAPIAN_H && !defined XAPIAN_LIB_BUILD
+#if !defined XAPIAN_IN_XAPIAN_H && !defined XAPIAN_LIB_BUILD
 # error "Never use <xapian/snipper.h> directly; include <xapian.h> instead."
 #endif
 
